// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`buildTabbyAdminOrderHtml snapshot matches stable output 1`] = `
"
                <body marginheight="0" topmargin="0" marginwidth="0" style="margin: 0px; padding-left: 25px; padding-right: 25px; background-color: #f2f3f8;" leftmargin="0">
                    <table cellspacing="0" border="0" cellpadding="0" width="100%" bgcolor="#f2f3f8" style="@import url(https://fonts.googleapis.com/css?family=Rubik:300,400,500,700|Open+Sans:300,400,600,700); font-family: 'Open Sans', sans-serif;">
                        <tr><td>
                                <table style="background-color: #f2f3f8; margin:0 auto;" width="100%" border="0" align="center" cellpadding="0" cellspacing="0">
                                    <tr><td style="height:40px;">&nbsp;</td></tr>
                                    <tr><td style="height:20px;">&nbsp;</td></tr>
                                    <tr><td style="text-align:center;"><a href="https://www.bazaar-uae.com" style="padding-top: 20px; padding-right: 20px; padding-left: 20px; padding-bottom: 15px;" title="logo" target="_blank"><img width="110" src="https://example.com/logo.png" title="logo" alt="logo"></a></td></tr>
                                    <tr><td style="height:20px;">&nbsp;</td></tr>
                                    <tr><td style="height:20px;">&nbsp;</td></tr>
                                    <tr><td style="height:20px;">&nbsp;</td></tr>
                                    <tr><td>
                                            <p style="color: #455056; font-size: 16px; line-height: 20px; font-weight: 600; margin-top: 0px; margin-bottom: 6px;"><b>Order No:</b> BZ2026001ABC</p>
                                            <p style="color: #455056; font-size: 16px; line-height: 20px; font-weight: 600; margin-top: 0px; margin-bottom: 6px;"><b>Date & Time:</b> 01 January 2026 - 10:00 am</p>
                                            <p style="color: #455056; font-size: 16px; line-height: 20px; font-weight: 600; margin-top: 10px; margin-bottom: 6px;"><b>To be delivered before:</b> Friday, 4 January</p>
                                            <p style="color: #455056; font-size: 16px; line-height: 20px; font-weight: bold; margin-top: 10px; margin-bottom: 6px;"><b>Payment Method:</b> Tabby</p>
                                    </td></tr>
                                    <tr><td style="height:30px;">&nbsp;</td></tr>
                                    <tr><td>
                                            <p style="color: #455056; font-size: 16px; line-height: 20px; font-weight: 600; margin-top: 0px; margin-bottom: 6px;"><b>A new order has been placed on Bazaar.</b></p>
                                            <p style="color: #455056; font-size: 16px; line-height: 20px; font-weight: 600; margin-top: 0px; margin-bottom: 6px;">Below are the order details:</p>
                                    </td></tr>
                                    <tr><td style="height:20px;">&nbsp;</td></tr>
                                    <tr><td>
                                            <table width="100%" border="0" align="center" cellpadding="0" cellspacing="0" style="text-align: center; margin-top: 20px; background:#fff; border-radius:3px; box-shadow:0 6px 18px 0 rgba(0,0,0,.06);">
                                                <thead style="text-align: center;"><tr style="background-color: #f8f9fa; text-align: center;"><th style="padding: 12px; border-bottom: 1px solid #ddd; text-align: center;">Item Name</th><th style="padding: 12px; border-bottom: 1px solid #ddd; text-align: center;">Item Varient</th><th style="padding: 12px; border-bottom: 1px solid #ddd; text-align: center;">Item Quantity</th><th style="padding: 12px; border-bottom: 1px solid #ddd; text-align: center;">Item Price</th></tr></thead>
                                                <tbody style="font-size: 14px;"><tr><td>Widget</td><td>Red</td><td>2</td><td>AED 50.00</td></tr></tbody>
                                                <thead><tr style="background-color: #f8f9fa;"><th></th><th></th><th style="padding: 12px; border-bottom: 1px solid #ddd; text-align: center;"><b>Shipping Charges</b></th><th style="padding: 12px; border-bottom: 1px solid #ddd; text-align: center;"><b>AED 15.00</b></th></tr></thead>
                                                <thead><tr style="background-color: #f8f9fa;"><th></th><th></th><th style="padding: 12px; border-bottom: 1px solid #ddd; text-align: center;"><b>Sub Total</b></th><th style="padding: 12px; border-bottom: 1px solid #ddd; text-align: center;"><b>AED 100.00</b></th></tr></thead>
                                                
                                                <thead><tr style="background-color: #f8f9fa;"><th></th><th></th><th style="padding: 12px; border-bottom: 1px solid #ddd; text-align: center;"><b>Total</b></th><th style="padding: 12px; border-bottom: 1px solid #ddd; text-align: center;"><b>AED 115.00</b></th></tr></thead>
                                            </table>
                                    </td></tr>
                                    <tr><td style="height:20px;">&nbsp;</td></tr>
                                    <tr><td><p style="color: #455056; font-size: 22px; line-height: 20px; font-weight: 600;">Customer Information</p><br /></td></tr>
                                    <tr><td>
                                            <p style="color: #455056; font-size: 13px; line-height: 15px; font-weight: 600; margin-bottom: 6px;">Customer Name: Jane Doe</p>
                                            <p style="color: #455056; font-size: 13px; line-height: 15px; font-weight: 600; margin-bottom: 6px;">Customer Email: jane@example.com</p>
                                            <p style="color: #455056; font-size: 13px; line-height: 15px; font-weight: 600; margin-bottom: 6px;">City: Dubai</p>
                                            <p style="color: #455056; font-size: 13px; line-height: 15px; font-weight: 600; margin-bottom: 6px;">Area: Downtown</p>
                                            <p style="color: #455056; font-size: 13px; line-height: 15px; font-weight: 600; margin-bottom: 6px;">Building Name: Burj Tower</p>
                                            <p style="color: #455056; font-size: 13px; line-height: 15px; font-weight: 600; margin-bottom: 6px;">Floor No: 5</p>
                                            <p style="color: #455056; font-size: 13px; line-height: 15px; font-weight: 600; margin-bottom: 6px;">Apartment No: 502</p>
                                            <p style="color: #455056; font-size: 13px; line-height: 15px; font-weight: 600; margin-bottom: 6px;">Landmark: Near mall</p>
                                            <p style="color: #455056; font-size: 13px; line-height: 15px; font-weight: 600; margin-bottom: 6px;">Phone: +971501234567</p>
                                    </td></tr>
                                    <tr><td style="height:20px;">&nbsp;</td></tr>
                                    <tr><td style="text-align:center;"><p style="font-size:14px; color:rgba(69, 80, 86, 0.74); line-height:18px; margin:0;">&copy; <strong>bazaar-uae.com</strong></p></td></tr>
                                    <tr><td style="height:80px;">&nbsp;</td></tr>
                                </table>
                        </td></tr>
                    </table>
                </body>"
`;

exports[`buildTabbyUserOrderHtml snapshot matches stable output 1`] = `
"
                <body marginheight="0" topmargin="0" marginwidth="0" style="margin: 0px; padding-left: 25px; padding-right: 25px; background-color: #f2f3f8;" leftmargin="0">
                    <table cellspacing="0" border="0" cellpadding="0" width="100%" bgcolor="#f2f3f8" style="@import url(https://fonts.googleapis.com/css?family=Rubik:300,400,500,700|Open+Sans:300,400,600,700); font-family: 'Open Sans', sans-serif;">
                        <tr><td>
                                <table style="background-color: #f2f3f8; margin:0 auto;" width="100%" border="0" align="center" cellpadding="0" cellspacing="0">
                                    <tr><td style="height:40px;">&nbsp;</td></tr>
                                    <tr><td style="height:20px;">&nbsp;</td></tr>
                                    <tr><td style="text-align:center;"><a href="https://www.bazaar-uae.com" style="padding-top: 20px; padding-right: 20px; padding-left: 20px; padding-bottom: 15px;" title="logo" target="_blank"><img width="110" src="https://example.com/logo.png" title="logo" alt="logo"></a></td></tr>
                                    <tr><td style="height:20px;">&nbsp;</td></tr>
                                    <tr><td style="height:20px;">&nbsp;</td></tr>
                                    <tr><td style="height:20px;">&nbsp;</td></tr>
                                    <tr><td>
                                            <p style="color: #455056; font-size: 16px; line-height: 20px; font-weight: 600; margin-top: 0px; margin-bottom: 6px;"><b>Order No:</b> BZ2026001ABC</p>
                                            <p style="color: #455056; font-size: 16px; line-height: 20px; font-weight: 600; margin-top: 0px; margin-bottom: 6px;"><b>Date & Time:</b> 01 January 2026 - 10:00 am</p>
                                            <p style="color: #455056; font-size: 16px; line-height: 20px; font-weight: 600; margin-top: 10px; margin-bottom: 6px;"><b>Get it By:</b> Friday, 4 January</p>
                                            <p style="color: #455056; font-size: 16px; line-height: 20px; font-weight: bold; margin-top: 10px; margin-bottom: 6px;"><b>Payment Method:</b> Tabby</p>
                                    </td></tr>
                                    <tr><td style="height:30px;">&nbsp;</td></tr>
                                    <tr><td>
                                            <p style="color: #455056; font-size: 16px; line-height: 20px; font-weight: 600;"><b>Jane Doe</b>! Thank you for your order with Bazaar!</p>
                                            <p style="color: #455056; font-size: 16px; line-height: 20px; font-weight: 600;">We have received your order and are processing it. Below are the details of your purchase</p>
                                    </td></tr>
                                    <tr><td style="height:20px;">&nbsp;</td></tr>
                                    <tr><td>
                                            <table width="100%" border="0" align="center" cellpadding="0" cellspacing="0" style="text-align: center; margin-top: 20px; background:#fff; border-radius:3px; box-shadow:0 6px 18px 0 rgba(0,0,0,.06);">
                                                <thead><tr style="background-color: #f8f9fa;"><th style="padding: 12px; border-bottom: 1px solid #ddd; text-align: center;">Item Name</th><th style="padding: 12px; border-bottom: 1px solid #ddd; text-align: center;">Item Varient</th><th style="padding: 12px; border-bottom: 1px solid #ddd; text-align: center;">Item Quantity</th><th style="padding: 12px; border-bottom: 1px solid #ddd; text-align: center;">Item Price</th></tr></thead>
                                                <tbody style="font-size: 14px;"><tr><td>Widget</td><td>Red</td><td>2</td><td>AED 50.00</td></tr></tbody>
                                                <thead><tr style="background-color: #f8f9fa;"><th></th><th></th><th style="padding: 12px; border-bottom: 1px solid #ddd; text-align: center;"><b>Shipping Charges</b></th><th style="padding: 12px; border-bottom: 1px solid #ddd; text-align: center;"><b>AED 15.00</b></th></tr></thead>
                                                <thead><tr style="background-color: #f8f9fa;"><th></th><th></th><th style="padding: 12px; border-bottom: 1px solid #ddd; text-align: center;"><b>Sub Total</b></th><th style="padding: 12px; border-bottom: 1px solid #ddd; text-align: center;"><b>AED 100.00</b></th></tr></thead>
                                                
                                                <thead><tr style="background-color: #f8f9fa;"><th></th><th></th><th style="padding: 12px; border-bottom: 1px solid #ddd; text-align: center;"><b>Total</b></th><th style="padding: 12px; border-bottom: 1px solid #ddd; text-align: center;"><b>AED 115.00</b></th></tr></thead>
                                            </table>
                                    </td></tr>
                                    <tr><td style="height:20px;">&nbsp;</td></tr>
                                    <tr><td><p style="color: #455056; font-size: 22px; line-height: 20px; font-weight: 600;">Billing Details</p><br /></td></tr>
                                    <tr><td>
                                            <p style="color: #455056; font-size: 13px; line-height: 15px; font-weight: 600; margin-bottom: 6px;">Customer Name: Jane Doe</p>
                                            <p style="color: #455056; font-size: 13px; line-height: 15px; font-weight: 600; margin-bottom: 6px;">Customer Email: jane@example.com</p>
                                            <p style="color: #455056; font-size: 13px; line-height: 15px; font-weight: 600; margin-bottom: 6px;">City: Dubai</p>
                                            <p style="color: #455056; font-size: 13px; line-height: 15px; font-weight: 600; margin-bottom: 6px;">Area: Downtown</p>
                                            <p style="color: #455056; font-size: 13px; line-height: 15px; font-weight: 600; margin-bottom: 6px;">Building Name: Burj Tower</p>
                                            <p style="color: #455056; font-size: 13px; line-height: 15px; font-weight: 600; margin-bottom: 6px;">Floor No: 5</p>
                                            <p style="color: #455056; font-size: 13px; line-height: 15px; font-weight: 600; margin-bottom: 6px;">Apartment No: 502</p>
                                            <p style="color: #455056; font-size: 13px; line-height: 15px; font-weight: 600; margin-bottom: 6px;">Landmark: Near mall</p>
                                            <p style="color: #455056; font-size: 13px; line-height: 15px; font-weight: 600; margin-bottom: 6px;">Phone: +971501234567</p>
                                    </td></tr>
                                    <tr><td style="height:20px;">&nbsp;</td></tr>
                                    <tr><td style="text-align:center;"><p style="font-size:14px; color:rgba(69, 80, 86, 0.74); line-height:18px; margin:0;">&copy; <strong>bazaar-uae.com</strong></p></td></tr>
                                    <tr><td style="height:80px;">&nbsp;</td></tr>
                                </table>
                        </td></tr>
                    </table>
                </body>"
`;
